--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ description: digital portfolio for data scientist Luke Wolcott
 navbar-links:
   About Me: "aboutme"
   Resume: "http://www.forthelukeofmath.com/documents/cv-current.pdf"
+  Math Site: "http://www.forthelukeofmath.com"
   Projects:
     - Modulated Predatory-Prey Dynamics: "https://github.com/lukewolcott/ModulatedPredatorPrey"
     - InTheResistance: "https://github.com/lukewolcott/InTheResistance"
